src/layouts/PageLayout.css
/* import lato */
@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap');

* {
  margin: 0;
  padding: 0;
  font-family: Lato, sans-serif;
}

section {
  margin-left: 18rem;
}

@media screen and (width <= 992px) {
  section {
    margin-left: 0;
  }
}

